@@ -1,0 +1,6 @@
+KERNEL TERMINAL CONSOLE DOCUMENTATION
+ACCURATE AS OF: 2020-08-11
+
+Kernel terminal output functions:
+	kprintf()	* parallels stdio printf
+	
